infrastructure/ingress/metrics-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: metrics-api
  namespace: bvrinfra

  annotations:
    kubernetes.io/ingress.class: traefik

spec:
  ingressClassName: traefik

  rules:
  - host: metrics.bvrinfra.in

    http:
      paths:
      - path: /
        pathType: Prefix

        backend:
          service:
            name: metrics-api
            port:
              number: 80
